<resources>
    <string name="app_name">Archery Trainer</string>
    <string name="action_settings">Settings</string>


    <!-- Strings related to login -->
        <string name="prompt_email">Email</string>
        <string name="action_sign_in">Sign in or register</string>
        <string name="action_sign_in_short">Log in</string>
        <string name="error_invalid_email">This email address is invalid</string>
        <string name="error_field_required">This field is required</string>
        <string name="settings">Settings</string>
        <string name="archives">Archives</string>
        <string name="logout">Log out</string>
        <string name="id">ID</string>
        <string name="height">Height</string>
        <string name="weight">Weight</string>
        <string name="BowForce">Bow Force</string>
        <string name="trainerId">Trainer Id</string>
        <string name="BestResults">Best results</string>
        <string name="recording">Recording</string>
        <string name="DebugMode">Debug Mode</string>
        <string name="LeftTrapezoid">Left Trapezoid</string>
        <string name="RightTrapezoid">Right Trapezoid</string>
        <string name="LeftDeltoid">Left Deltoid</string>
        <string name="RightDeltoid">Right Deltoid</string>
        <string name="LeftTriceps">Left Triceps</string>
        <string name="RightTriceps">Right Triceps</string>
        <string name="ShowMuscleData">Show muscle data</string>
        <string name="Help">Help</string>
        <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
