<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/LeftTrapezoid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/LeftTrapezoid"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="62dp" />

    <CheckBox
        android:id="@+id/RightDeltoid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RightDeltoid"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="231dp"
        tools:layout_editor_absoluteY="62dp" />

    <CheckBox
        android:id="@+id/RightTrapezoid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RightTrapezoid"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="111dp"
        tools:ignore="MissingConstraints"/>

    <CheckBox
        android:id="@+id/LeftTriceps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LeftTriceps"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="237dp"
        tools:layout_editor_absoluteY="111dp" />

    <CheckBox
        android:id="@+id/LeftDeltoid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LeftDeltoid"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="155dp"
        tools:ignore="MissingConstraints"/>

    <CheckBox
        android:id="@+id/RightTriceps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RightTriceps"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="229dp"
        tools:layout_editor_absoluteY="155dp" />

    <TextView
        android:id="@+id/showMuscleData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ShowMuscleData"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints"/>
</android.support.constraint.ConstraintLayout>