<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.archery.tessa.homescreen.ProfileActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/plain_text_input"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:background="#ffa500"
        android:inputType="text"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="88dp" />

    <EditText
        android:id="@+id/plain_text_input1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="#ffa500"
        android:inputType="text"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="159dp" />

    <EditText
        android:id="@+id/plain_text_input2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:background="#ffa500"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="220dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/plain_text_input3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:background="#ffa500"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="404dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/plain_text_input4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:background="#ffa500"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="310dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="659dp"
        tools:layout_editor_absoluteY="882dp" />

    <TextView
        android:id="@+id/Id"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="@string/id"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="88dp" />

    <TextView
        android:id="@+id/Weight"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="@string/weight"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="231dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="@string/BowForce"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="324dp"
        android:fontFamily="sans-serif-dark"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="@string/DebugMode"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="413dp"
        tools:ignore="MissingConstraints"
        />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Graph settings"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="447dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />/>

</android.support.constraint.ConstraintLayout>
